# ascent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test-native.yml
applications/: CMakeLists.txt
applications/flight_controller/: CMakeLists.txt  main.cpp
applications/flight_controller/src/: flight_main.cpp
applications/groundstation_ifc/: CMakeLists.txt  main.cpp
applications/groundstation_ifc/src/: groundstation_main.cpp
config/: board_native.h  board_stm32f7_nucleo.h  safety_limits.h  sensors_config.h  telemetry_config.h
core/: CMakeLists.txt
core/include/: error_handler.h  event_bus.h  scheduler.h  system.h
core/include/ascent/core/: config.h  logger.h  types.h
core/src/: error_handler.cpp  event_bus.cpp  logger.cpp  scheduler.cpp  system.cpp
docs/: api-ref.md  architecture.md  building.md  hw-integration.md
docs/doxygen/: Doxyfile
drivers/: CMakeLists.txt
drivers/include/ascent/drivers/actuators/: actuator_base.h  igniter.h  pyro_channel.h  servo.h  valve.h
drivers/include/ascent/drivers/sensors/: accelerometer.h  barometer.h  gps.h  gyroscope.h  imu.h  magnetometer.h  sensor_base.h  temperature.h
drivers/src/actuators/: actuator_base.cpp  igniter.cpp  pyro_channel.cpp  servo.cpp  valve.cpp
drivers/src/sensors/: barometer_base.cpp  barometer_bmp388.cpp  barometer_ms5611.cpp  gps_base.cpp  gps_ublox.cpp  imu_base.cpp  imu_bmi088.cpp  imu_mpu6050.cpp  magnetometer_base.cpp  magnetometer_lis3mdl.cpp  sensor_base.cpp
hal/: CMakeLists.txt
hal/include/: actuator_interface.h  communication_interface.h  gpio_interface.h  sensor_interface.h
hal/include/ascent/hal/: adc.h  gpio.h  i2c.h  pwm.h  spi.h  time.h  types.h  uart.h  watchdog.h
hal/src/: actuator_interface.cpp  adc.cpp  communication_interface.cpp  gpio.cpp  gpio_interface.cpp  i2c.cpp  pwm.cpp  sensor_interface.cpp  spi.cpp  time.cpp  uart.cpp  watchdog.cpp
modules/: CMakeLists.txt
modules/communication/include/ascent/communication/: command_parser.h  protocol_handler.h  radio_link.h
modules/communication/src/: command_parser.cpp  protocol_handler.cpp  radio_link.cpp
modules/navigation/include/ascent/navigation/: altitude_estimator.h  attitude_estimator.h  gps_handler.h  imu_fusion.h  kalman_filter.h  navigation_system.h
modules/navigation/src/: altitude_estimator.cpp  attitude_estimator.cpp  gps_handler.cpp  imu_fusion.cpp  kalman_filter.cpp  navigation_system.cpp
modules/propulsion/include/ascent/propulsion/: ignition_sequence.h  propulsion_controller.h  thrust_monitor.h  valve_controller.h
modules/propulsion/src/: ignition_sequence.cpp  propulsion_controller.cpp  thrust_monitor.cpp  valve_controller.cpp
modules/safety/include/ascent/safety/: abort_controller.h  health_monitor.h  range_safety.h  safety_monitor.h
modules/safety/src/: abort_controller.cpp  health_monitor.cpp  range_safety.cpp  safety_monitor.cpp
modules/telemetry/include/ascent/telemetry/: data_logger.h  packet_formatter.h  telemetry_manager.h
modules/telemetry/src/: data_logger.cpp  packet_formatter.cpp  telemetry_manager.cpp
scripts/: build_native.sh  build_stm32f7.sh  flash.sh  generate_docs.sh  run_tests.sh
simulation/: CMakeLists.txt
simulation/desktop_runner/src/: desktop_main.cpp
simulation/mock_hardware/include/: mock_actuator.h  mock_gpio.h  mock_sensor.h
simulation/mock_hardware/src/: mock_actuator.cpp  mock_gpio.cpp  mock_sensor.cpp
tests/: CMakeLists.txt
tests/integration/: test_flight_sequence.cpp  test_sensor_fusion.cpp  test_telemetry_pipeline.cpp
tests/unit/core/: test_error_handler.cpp  test_event_bus.cpp  test_scheduler.cpp  test_system.cpp  test_types.cpp
tests/unit/drivers/: test_barometer.cpp  test_gps.cpp  test_imu.cpp
tests/unit/hal/: test_gpio.cpp  test_i2c.cpp  test_spi.cpp  test_uart.cpp
tests/unit/modules/: test_navigation.cpp  test_propulsion.cpp  test_safety.cpp  test_telemetry.cpp
